# c-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_hash.c  hashes.c  init-unesp.ps1  main.c  run-linux.sh  run-win.ps1  server  server.c
include/: file.h  hashed_file_extensions.h  headers.h  http.h  request.h  response.h  route.h
include/json/: core.h  exception.h  io.h  parse.h  utils.h
include/json/core/: functions.h  types.h
include/server/: core.h  http.h  options.h  sockets.h
include/utils/: defs.h  hash.h  io.h  memory.h  string.h  types.h
src/: file.c  file.h  hash.c  hash.h  hashed_file_extensions.h  headers.c  headers.h  http.c  http.h  main.c  request.c  request.h  response.c  response.h  route.c  route.h  string.c  string.h  types.h  util.h
src/json/: core.c  exception.c  io.c  parse.c  utils.c
src/json/core/: functions.c
src/server/: http.c  options.c  sockets.c
src/utils/: hash.c  io.c  memory.c  string.c
static/: error.html  index.html
